# esp32_sunspec_rest

./: .gitmodules  LICENSE  README.md  consumer.py
developer_aux/: Makefile  README.md  main.c  run.sh  sunspec_models.c  sunspec_models.h
doc/: PATCH_schema.json  arquitecture.drawio  definitions.drawio  diagrams.drawio  model_307.json
doc/adicinal example model/: main 65500 test.c  model_65500.json
esp32_sunspec_rest/: .gitignore  CMakeLists.txt  README.md  TODO.md  known_issues.md  sdkconfig  sdkconfig.old
esp32_sunspec_rest/components/app_https_server/: CMakeLists.txt  README.md  app_basic_auth.c  app_get_router.c  app_https_server.c  app_patch_router.c  app_send_error.c  error_factory.c  idf_component.yml
esp32_sunspec_rest/components/app_https_server/include/: app_https_server.h
esp32_sunspec_rest/components/app_sunspec_models/: CMakeLists.txt  model_1.c  model_307.c  model_65500.c
esp32_sunspec_rest/components/app_wifi/: CMakeLists.txt  Kconfig.projbuild  app_ap_wifi.c  app_sta_wifi.c  app_wifi.c
esp32_sunspec_rest/components/bmp280_reader/: CMakeLists.txt  bmp280_reader.c
esp32_sunspec_rest/components/sht31_reader/: CMakeLists.txt  sht31_reader.c
esp32_sunspec_rest/main/: CMakeLists.txt  main copy.c  main.c
grafana_dasboard/: Model 307-1670699911797.json  README.md
suns_monitor/app/: get.py  patch.py  save_data.py  suns_monitor.py
suns_monitor/grafana_dash/: Model 307-1670759170229.json  Model 307-1671063264606.json  README.md
suns_monitor/install/: install.sh  suns_monitor.service  unistall.sh
(+10 files in other folders)
